--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,19 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 
+jar {
+	baseName = 'tripsharing'
+	version = '1.0.0'
+}
+
 group = 'ch.tripsharing'
 version = '0.0.1'
 sourceCompatibility = 1.8
+
+ext.assertJVersion         = '3.6.2'
+ext.hibernateVersion       = '5.2.8.Final'
+ext.jacksonDateTimeVersion = '2.8.7'
+ext.wiserVersion           = '3.1.7'
 
 repositories {
 	mavenCentral()
