--- a/build.gradle
+++ b/build.gradle
@@ -34,15 +34,49 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-jdbc')
-	compile('org.springframework.boot:spring-boot-starter-mail')
 	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	compile('org.springframework.boot:spring-boot-starter-mobile')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('com.h2database:h2')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
+	compile('org.springframework.boot:spring-boot-starter-mail')
+	
+	compile('io.jsonwebtoken:jjwt:0.7.0')
+	
 	compileOnly('org.projectlombok:lombok')
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonDateTimeVersion}")
+	compile("org.hibernate:hibernate-java8:${hibernateVersion}")
+	
+	compile('org.webjars:webjars-locator:0.32')
+	compile('org.webjars:bootstrap:3.3.7-1')
+	compile('org.webjars:jquery:3.1.1-1')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+	
+	runtime('com.h2database:h2')
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
+	testCompile("org.assertj:assertj-core:${assertJVersion}")
+	testCompile("org.subethamail:subethasmtp:${wiserVersion}")
+}	
+	task showMeCache {
+	doLast {
+		println('compileOnly dependencies:')
+		configurations.compileOnly.each { println it }
+		println('compile dependencies:')
+		configurations.compile.each { println it }
+		println('runtime dependencies:')
+		configurations.runtime.each { println it }
+		println('testCompile dependencies:')
+		configurations.testCompile.each { println it }
+	}
+}
+
+eclipse.project {
+	natures 'org.springframework.ide.eclipse.core.springnature'
+	buildCommand 'org.springframework.ide.eclipse.core.springbuilder'
+}
+
+task wrapper(type: Wrapper) {
+	gradleVersion = '4.2.1'
 }
