--- a/trip_sharing-frontend/package.json
+++ b/trip_sharing-frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@blueprintjs/core": "^1.33.0",
     "material-ui": "^0.19.4",
+    "moment": "^2.19.3",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
