--- a/trip_sharing-frontend/package.json
+++ b/trip_sharing-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^1.33.0",
+    "google-maps-react": "^1.1.2",
     "material-ui": "^0.19.4",
     "moment": "^2.19.3",
     "react": "^16.2.0",
