--- a/trip_sharing-frontend/package.json
+++ b/trip_sharing-frontend/package.json
@@ -6,6 +6,7 @@
     "@blueprintjs/core": "^1.33.0",
     "google-maps-react": "^1.1.2",
     "material-ui": "^0.19.4",
+    "material-ui-rating": "^1.4.0",
     "moment": "^2.19.3",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
